--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ai",
-  "version": "5.1.0-beta.19",
+  "name": "@zenning/ai",
+  "version": "5.2.0",
   "description": "AI SDK by Vercel - The AI Toolkit for TypeScript and JavaScript",
   "license": "Apache-2.0",
   "sideEffects": false,
@@ -54,9 +54,9 @@
     }
   },
   "dependencies": {
-    "@ai-sdk/gateway": "workspace:*",
-    "@ai-sdk/provider": "workspace:*",
-    "@ai-sdk/provider-utils": "workspace:*",
+    "@ai-sdk/gateway": "latest",
+    "@ai-sdk/provider": "latest",
+    "@ai-sdk/provider-utils": "latest",
     "@opentelemetry/api": "1.9.0"
   },
   "devDependencies": {
